--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -29,11 +29,7 @@ on:
         description: The vendor of the container
         default: metio.wtf
         required: false
-    secrets:
-      registry_username:
-        required: true
-      registry_password:
-        required: true
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -61,8 +57,8 @@ jobs:
         name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.registry_username }}
-          password: ${{ secrets.registry_password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - id: timestamp
         name: Create Timestamp
         run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
@@ -132,8 +128,8 @@ jobs:
         name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v3
         with:
-          username: ${{ secrets.registry_username }}
-          password: ${{ secrets.registry_password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ inputs.repository }}-${{ inputs.language }}
           short-description: ${{ inputs.description }}
           readme-filepath: ./languages/${{ inputs.language }}/README.md
