fix some hadolint issues for tf

--- a/languages/terraform/latest/Containerfile
+++ b/languages/terraform/latest/Containerfile
@@ -1,10 +1,11 @@
 # Image for Terraform development
 # Based on the official image available at https://hub.docker.com/r/hashicorp/terraform
 
+# hadolint ignore=DL3007
 FROM docker.io/hashicorp/terraform:latest
 
 ENV TF_LS_VERSION=0.27.0
-RUN wget https://releases.hashicorp.com/terraform-ls/${TF_LS_VERSION}/terraform-ls_${TF_LS_VERSION}_linux_amd64.zip -O tfls.zip && \
+RUN wget --progress=dot:giga https://releases.hashicorp.com/terraform-ls/${TF_LS_VERSION}/terraform-ls_${TF_LS_VERSION}_linux_amd64.zip -O tfls.zip && \
     unzip tfls.zip && \
     mv terraform-ls /usr/local/bin/terraform-ls && \
     chmod +x /usr/local/bin/terraform-ls && \
