fix hadolint for R:latest

--- a/languages/r/latest/Containerfile
+++ b/languages/r/latest/Containerfile
@@ -1,6 +1,7 @@
 # Image for R development
 # Based on the official image available at https://hub.docker.com/_/r-base
 
+# hadolint ignore=DL3007
 FROM docker.io/library/r-base:latest
 
 RUN R -e 'install.packages("languageserver")'
