--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -4,84 +4,40 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/publish-image.yml
       - .github/workflows/haskell.yml
       - languages/haskell/**
   schedule:
     - cron:  25 4 * * MON
-env:
-  LANGUAGE: haskell
-  REPOSITORY: metio/devcontainers
 jobs:
-  publish:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
-    strategy:
-      matrix:
-        version: ["8.10", "9.0", "9.2", "latest"]
-    steps:
-      - id: checkout
-        name: Checkout Code
-        uses: actions/checkout@v3
-      - id: cosign
-        name: Install Cosign
-        uses: sigstore/cosign-installer@main
-      - id: syft
-        name: Install Syft
-        uses: anchore/sbom-action/download-syft@v0.12.0
-      - id: buildx
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - id: dockerhub_login
-        name: Login to Dockerhub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - id: timestamp
-        name: Create Timestamp
-        run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
-      - id: publish
-        name: Publish Image
-        uses: docker/build-push-action@v3
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          context: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/
-          file: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/Containerfile
-          push: true
-          tags: docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:${{ matrix.version }}
-          labels: |
-            org.opencontainers.image.title=${{ env.LANGUAGE }}
-            org.opencontainers.image.description=Image for ${{ env.LANGUAGE }} development
-            org.opencontainers.image.licenses=CC0-1.0
-            org.opencontainers.image.vendor=metio.wtf
-            org.opencontainers.image.url=https://github.com/${{ github.repository }}
-            org.opencontainers.image.documentation=https://github.com/${{ github.repository }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ matrix.version }}
-            org.opencontainers.image.version=${{ matrix.version }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ steps.timestamp.outputs.date }}
-          cache-from: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache
-          cache-to: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache,mode=max
-      - id: sign
-        name: Sign Image
-        run: cosign sign docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-      - id: sbom
-        name: Attach SBOM
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        run: |
-          syft docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }} -o spdx-json=sbom-spdx.json
-          cosign attest --predicate sbom-spdx.json --type spdx docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
-      - id: documentation
-        name: Docker Hub Description
-        uses: peter-evans/dockerhub-description@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.REPOSITORY }}-${{ env.LANGUAGE }}
-          short-description: Devcontainer for Haskell with Haskell Language Server
-          readme-filepath: ./languages/${{ env.LANGUAGE }}/README.md
+  latest:
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      version: latest
+      language: haskell
+      description: Devcontainer for Haskell with Haskell Language Server
+    secrets: inherit
+  version-810:
+    name: "8.10"
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      version: "8.10"
+      language: haskell
+      description: Devcontainer for Haskell with Haskell Language Server
+    secrets: inherit
+  version-90:
+    name: "9.0"
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      version: "9.0"
+      language: haskell
+      description: Devcontainer for Haskell with Haskell Language Server
+    secrets: inherit
+  version-92:
+    name: "9.2"
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      version: "9.2"
+      language: haskell
+      description: Devcontainer for Haskell with Haskell Language Server
+    secrets: inherit
