--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,26 +10,14 @@ on:
   schedule:
     - cron:  25 5 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest", "18", "16" ]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
-      language: nodejs
-      description: Devcontainer for NodeJS with TypeScript Language Server
-    secrets: inherit
-  version-16:
-    name: "16"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "16"
-      language: nodejs
-      description: Devcontainer for NodeJS with TypeScript Language Server
-    secrets: inherit
-  version-18:
-    name: "18"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "18"
+      version: "${{ matrix.version }}"
       language: nodejs
       description: Devcontainer for NodeJS with TypeScript Language Server
     secrets: inherit
