--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  15 3 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: clojure
       description: Devcontainer for Clojure with clojure-lsp
     secrets: inherit
