--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  25 3 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: crystal
       description: Devcontainer for Crystal with Crystalline
     secrets: inherit
