--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -10,26 +10,14 @@ on:
   schedule:
     - cron:  15 4 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest", "17", "11"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
-      language: graalvm
-      description: Devcontainer for GraalVM with JDT LS
-    secrets: inherit
-  version-11:
-    name: "11"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "11"
-      language: graalvm
-      description: Devcontainer for GraalVM with JDT LS
-    secrets: inherit
-  version-17:
-    name: "17"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "17"
+      version: "${{ matrix.version }}"
       language: graalvm
       description: Devcontainer for GraalVM with JDT LS
     secrets: inherit
