--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -10,34 +10,14 @@ on:
   schedule:
     - cron:  25 4 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest", "9.2", "9.0", "8.10"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
-      language: haskell
-      description: Devcontainer for Haskell with Haskell Language Server
-    secrets: inherit
-  version-810:
-    name: "8.10"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "8.10"
-      language: haskell
-      description: Devcontainer for Haskell with Haskell Language Server
-    secrets: inherit
-  version-90:
-    name: "9.0"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "9.0"
-      language: haskell
-      description: Devcontainer for Haskell with Haskell Language Server
-    secrets: inherit
-  version-92:
-    name: "9.2"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "9.2"
+      version: "${{ matrix.version }}"
       language: haskell
       description: Devcontainer for Haskell with Haskell Language Server
     secrets: inherit
