--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -10,34 +10,14 @@ on:
   schedule:
     - cron:  35 4 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest", "17", "11", "8"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
-      language: java
-      description: Devcontainer for Java with JDT LS
-    secrets: inherit
-  version-8:
-    name: "8"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "8"
-      language: java
-      description: Devcontainer for Java with JDT LS
-    secrets: inherit
-  version-11:
-    name: "11"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "11"
-      language: java
-      description: Devcontainer for Java with JDT LS
-    secrets: inherit
-  version-17:
-    name: "17"
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      version: "17"
+      version: "${{ matrix.version }}"
       language: java
       description: Devcontainer for Java with JDT LS
     secrets: inherit
