--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  55 4 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: nim
       description: Devcontainer for Nim with Nim Language Server
     secrets: inherit
