--- a/.github/workflows/perl.yml
+++ b/.github/workflows/perl.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  35 5 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: perl
       description: Devcontainer for Perl with Perl Language Server
     secrets: inherit
