--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  15 6 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: r
       description: Devcontainer for R with R Language Server
     secrets: inherit
