--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  25 6 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: ruby
       description: Devcontainer for Ruby with Ruby Language Server
     secrets: inherit
