--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,10 +10,14 @@ on:
   schedule:
     - cron:  35 6 * * MON
 jobs:
-  latest:
+  version:
+    strategy:
+      matrix:
+        version: ["latest"]
+    name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
-      version: latest
+      version: "${{ matrix.version }}"
       language: terraform
       description: Devcontainer for Terraform with Terraform Language Server
     secrets: inherit
