Revert "explicit secrets"
This reverts commit 7753eea372855591ca8a4e7723ad357faf630166.

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -20,9 +20,7 @@ jobs:
       version: "${{ matrix.version }}"
       language: elixir
       description: Devcontainer for Elixir with ElixirLS
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-    secrets:
-      registry-password: "${{ secrets.DOCKER_PASSWORD }}"
+    secrets: inherit
   provenance:
     needs: [version]
     permissions:
