--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -1,15 +1,7 @@
 name: Publish Container Image
 on:
   workflow_call:
-    secrets:
-      registry-password:
-        description: Password to log in the container registry.
-        required: true
     inputs:
-      registry-username:
-        description: Username to log into the container registry.
-        required: true
-        type: string
       language:
         type: string
         description: The programming language of the devcontainer
@@ -74,8 +66,8 @@ jobs:
         name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.registry-password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - id: timestamp
         name: Create Timestamp
         run: echo "date=$(date --rfc-3339=seconds)" >> $GITHUB_OUTPUT
@@ -154,8 +146,8 @@ jobs:
         if: ${{ inputs.version }} == "latest"
         uses: peter-evans/dockerhub-description@v3
         with:
-          username: ${{ inputs.registry-username }}
-          password: ${{ secrets.registry-password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ inputs.repository }}-${{ inputs.language }}
           short-description: ${{ inputs.description }}
           readme-filepath: ./languages/${{ inputs.language }}/README.md
