--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -23,6 +23,10 @@ jobs:
     secrets: inherit
   provenance:
     needs: [version]
+    permissions:
+      actions: read # for detecting the Github Actions environment.
+      id-token: write # for creating OIDC tokens for signing.
+      packages: write # for uploading attestations.
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.4.0
     with:
       image: docker.io/metio/devcontainers-elixir
