--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: java
       description: Devcontainer for Java with JDT LS
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
