--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: clojure
       description: Devcontainer for Clojure with clojure-lsp
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
