--- a/.github/workflows/julia.yml
+++ b/.github/workflows/julia.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: julia
       description: Devcontainer for Julia with Julia Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
