--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: nim
       description: Devcontainer for Nim with Nim Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
