--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: nix
       description: Devcontainer for Nix with Nix Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
