--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: nodejs
       description: Devcontainer for NodeJS with TypeScript Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
