--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: r
       description: Devcontainer for R with R Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
