--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: ruby
       description: Devcontainer for Ruby with Ruby Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
