--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,4 +20,6 @@ jobs:
       version: "${{ matrix.version }}"
       language: terraform
       description: Devcontainer for Terraform with Terraform Language Server
-    secrets: inherit
+    secrets:
+      registry-username: ${{ secrets.DOCKER_USERNAME }}
+      registry-password: ${{ secrets.DOCKER_PASSWORD }}
