--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -20,6 +20,4 @@ jobs:
       version: "${{ matrix.version }}"
       language: graalvm
       description: Devcontainer for GraalVM with JDT LS
-    secrets:
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-      registry-password: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
