--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -20,6 +20,4 @@ jobs:
       version: "${{ matrix.version }}"
       language: haskell
       description: Devcontainer for Haskell with Haskell Language Server
-    secrets:
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-      registry-password: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
