--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -20,6 +20,4 @@ jobs:
       version: "${{ matrix.version }}"
       language: nim
       description: Devcontainer for Nim with Nim Language Server
-    secrets:
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-      registry-password: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
