--- a/.github/workflows/prolog.yml
+++ b/.github/workflows/prolog.yml
@@ -20,6 +20,4 @@ jobs:
       version: "${{ matrix.version }}"
       language: prolog
       description: Devcontainer for Prolog with Prolog Language Server
-    secrets:
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-      registry-password: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
