--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -1,13 +1,6 @@
 name: Publish Container Image
 on:
   workflow_call:
-    secrets:
-      registry-username:
-        description: Username to log in the container registry.
-        required: true
-      registry-password:
-        description: Password to log in the container registry.
-        required: true
     inputs:
       language:
         type: string
@@ -66,8 +59,8 @@ jobs:
         name: Login to Dockerhub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.registry-username }}
-          password: ${{ secrets.registry-password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - id: timestamp
         name: Create Timestamp
         run: echo "date=$(date --rfc-3339=seconds)" >> $GITHUB_OUTPUT
@@ -146,8 +139,8 @@ jobs:
         if: ${{ inputs.version }} == "latest"
         uses: peter-evans/dockerhub-description@v3
         with:
-          username: ${{ secrets.registry-username }}
-          password: ${{ secrets.registry-password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ inputs.repository }}-${{ inputs.language }}
           short-description: ${{ inputs.description }}
           readme-filepath: ./languages/${{ inputs.language }}/README.md
