--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -20,6 +20,4 @@ jobs:
       version: "${{ matrix.version }}"
       language: r
       description: Devcontainer for R with R Language Server
-    secrets:
-      registry-username: ${{ secrets.DOCKER_USERNAME }}
-      registry-password: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
